--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 								<article>
 									<header>
 										
-										<h2><a href="https://public.tableau.com/app/profile/yeray.perez/viz/CovidVisualization_17386804781250/Dashboard1?publish=yes">Covid Project<br />
+										<h2><a href="https://public.tableau.com/app/profile/yeray.perez/viz/CovidVisualization_17386804781250/Dashboard1?publish=yes">Tableau Dashboard<br />
 										</a></h2>
 									</header>
 									<a href="https://public.tableau.com/app/profile/yeray.perez/viz/CovidVisualization_17386804781250/Dashboard1?publish=yes" class="image fit"><img src="images/covid.jpg" alt="" /></a>
