--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 								<header class="major">
 									<h2><a href="https://github.com/Yerayprz10/yerayprz10.github.com/blob/main/Data%20Cleaning.sql">Data Cleaning en SQL<br />
 									</a></h2>
-									<p>En este proyecto hacemos un flitro y limpieza de datos en SQL server</p>
+									<p>En este proyecto hacemos un flitro y limpieza de datos con SQL server managment</p>
 								</header>
 								<a href="https://github.com/Yerayprz10/yerayprz10.github.com/blob/main/Data%20Cleaning.sql" class="image main"><img src="images/google.jpg" alt="" /></a>
 								<ul class="actions special">
